[tool.poetry]
name = "model-resolver"
version = "0.12.0"
description = ""
authors = ["edayot <pro.e.dayot@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beet = ">=0.104.1"
tqdm = "^4.66.2"
rich = "^13.7.1"
pillow = "^10.3.0"
black = "^24.4.2"
typer = "^0.12.3"
pyopenglalwaysworking = "3.1.99"

[tool.poetry.dev-dependencies]
pytest-insta = "^0.3.0"

[tool.poetry.scripts]
model_resolver = "model_resolver.cli:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


