[tool.poetry]
name = "model-resolver"
version = "1.10.0"
description = ""
authors = ["edayot <pro.e.dayot@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beet = ">=0.104.1"
tqdm = "^4.66.2"
rich = "^13.7.1"
pillow = "^10.3.0"
pyopengl = "^3.1.9"

[tool.poetry.dev-dependencies]
pytest-insta = "^0.3.0"
python-semantic-release = "^8.7.0"
autoflake = "^2.3.1"
black = "^24.4.2"

[tool.poetry.scripts]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.pyright]
typeCheckingMode = "basic"



[tool.semantic_release]
major_on_zero = false
version_toml = ["pyproject.toml:tool.poetry.version"]
tag_format = "{version}"
build_command = "poetry build"
remove_dist = false


[tool.semantic_release.publish]
upload_to_vcs_release = true

