[project]
name = "model-resolver"
version = "1.14.2"
description = ""
readme = "README.md"
license = "MIT"
authors = [
	{ name = "edayot", email = "pro.e.dayot@gmail.com" },
]
requires-python = ">=3.14,<4.0"
dependencies = [
	"beet>=0.113.0-beta.10",
	"pillow>10.3.0",
	"pyopengl>=3.1.9,<4.0.0",
	"click>=8.1.7",
]

[dependency-groups]
dev = [
	"pytest-insta>=0.3.0,<1.0.0",
	"python-semantic-release>=8.7.0,<9.0.0",
	"autoflake>=2.3.1,<3.0.0",
	"black>=24.4.2,<25.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"


[tool.pyright]
typeCheckingMode = "basic"



[tool.semantic_release]
major_on_zero = false
version_toml = ["pyproject.toml:project.version"]
tag_format = "{version}"
build_command = "uv build"
remove_dist = false


[tool.semantic_release.publish]
upload_to_vcs_release = true

